--- a/src/features/mainPage/userPage/userStatistic/statisticMain.css
+++ b/src/features/mainPage/userPage/userStatistic/statisticMain.css
@@ -1,6 +1,6 @@
 .statisticMain {
     width: 1421px;
-    height: 930px;
+    /* height: 930px; */
 }
 
 .balanAndInternalTransition {
@@ -288,7 +288,7 @@
     position: relative;
     cursor: pointer;
     animation-name: pagination;
-    animation-duration: 1s;
+    animation-duration: 0.3s;
 }
 
 @keyframes pagination {
