--- a/src/features/mainPage/header/header.css
+++ b/src/features/mainPage/header/header.css
@@ -62,8 +62,8 @@
 .menuItem button:hover{
     background: #5C58FF;
     color: white;
-    border: 2px solid #5C58FF;
-    padding-bottom: 2px;
+    /* border: 2px solid #5C58FF; */
+    /* padding-bottom: 2px; */
 }
 
 .displayNone {
@@ -99,16 +99,21 @@
     border-radius: 10px;
     background: white;
     padding-bottom: 3px;
+    display: flex;
+    flex-direction: column;
 }
 
-.option li {
-    list-style: none;
+.option > button {
     text-decoration: underline;
     margin-top: 3px;
     border-radius: 10px;
+    outline: none;
+    border: none;
+    background: transparent;
+
 }
 
-.option li:hover {
+.option > button:hover {
     background: rgba(0, 0, 255, 0.555);
     color: white;
 }
