--- a/src/features/mainPage/userPage/header/responsive.css
+++ b/src/features/mainPage/userPage/header/responsive.css
@@ -1,3 +1,8 @@
+@media (max-height:601px) {
+    .userPageMenu {
+        gap: 10px !important;
+    }
+}
 @media (max-width:1800px) {
     .userMainPAge {
         width: 99%;
