--- a/src/features/mainPage/header/AresponsiveHeadeer.css
+++ b/src/features/mainPage/header/AresponsiveHeadeer.css
@@ -24,9 +24,9 @@
 }
 
 @media screen and (min-width:1024px) {
-    .toggle {
+    /* .toggle {
         display: none !important;
-    }
+    } */
 }
 
 @media screen and (max-width:500px) {
