--- a/src/features/mainPage/mainPage.css
+++ b/src/features/mainPage/mainPage.css
@@ -28,18 +28,26 @@ html[lang="am"] * {
     font-family: "Montserrat-RegularArm" !important;
 }
 
-html[lang="am"] .activeRegisterButton {
-    font-family  :"Montserrat-BoldArm" !important;
-}
-
+html[lang="am"] .activeRegisterButton,
 html[lang="am"] .activeSignInButton {
     font-family  :"Montserrat-BoldArm" !important;
 }
 
+/* html[lang="am"] .activeSignInButton {
+    font-family  :"Montserrat-BoldArm" !important;
+} */
+
+html[lang="am"] .checkboxForAggrement {
+    font-size: 16px !important;
+}
+
+html {
+    background: radial-gradient(#B1B1FF 0%,#e3e2ff67 100%);
+}
 
 .MainPage {
     width: 100%;
-    background: radial-gradient(#B1B1FF 0%,#E3E2FF 100%);
+    background: radial-gradient(#B1B1FF 0%,#e3e2ff67 100%);
 }
 
 @media (max-width:1920px) and (min-width:1920) {
